--- a/index.html
+++ b/index.html
@@ -2,14 +2,26 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Macaw</title>
     <meta name="description" content="The free, elegant and simple OS">
   </head>
   <body>
     <div class="nav">
-      <img src="https://raw.githubusercontent.com/macawos/ornith/master/logo/icon/macaw.svg" alt="Logo!">
+      <div class="title">
+        <img src="https://raw.githubusercontent.com/macawos/ornith/master/logo/icon/macaw.svg" alt="Logo!">
+        <h1>Macaw</h1>
+      </div>
+      <div class="bar">
+        <a href="#">About</a>
+        <a href="#">Packages</a>
+        <a href="#">Contribute</a>
+        <a class="btn" href="#">Download</a>
+        <a class="btn" href="#"><i class=""></i>Donate</a>
+      </div>
     </div>
-    <h1>hmm</h1>
+
   </body>
 </html>
