--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
       <div class="bar">
         <a href="#">About</a>
         <a href="#">Packages</a>
+        <a href="#">Documentation</a>
         <a href="#">Contribute</a>
-        <a class="btn" href="#">Download</a>
-        <a class="btn" href="#"><i class=""></i>Donate</a>
+        <a href="#">Donate</a>
+        <button>Download</button>
       </div>
     </div>
-
+    <div class="home-panel">
+      <h1>Free</h1>
+    </div>
   </body>
 </html>
