--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="style.css">
     <title>Macaw</title>
     <meta name="description" content="The free, elegant and simple OS">
+    <meta name="theme-color" content="#6799F3">
   </head>
   <body>
     <div class="nav">
       <div class="title">
-        <img src="https://raw.githubusercontent.com/macawos/ornith/master/logo/icon/macaw.svg" alt="Logo!">
+        <img src="assets/macaw.svg" alt="Logo!">
         <h1>Macaw</h1>
       </div>
       <div class="bar">
