made the hero thing

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         <button>Download</button>
       </div>
     </div>
-    <div class="home-panel">
-      <h1>Free</h1>
-      <p></p>
+    <div class="hero">
+      <h1>Free, elegant and simple</h1>
+      <p>Macaw is a free and open-source project that aims to deliver a beautiful and easy to use Linux-based OS.</p>
+      <button>Download</button>
     </div>
   </body>
 </html>
