--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta name="theme-color" content="#6799F3">
   </head>
   <body>
+    <div class="placeholder">
+      <p>Macaw is currently being developed and is not available. Therefore, this site is simply a placeholder. <a href="#">Contribute!</a></p>
+    </div>
     <div class="nav">
       <div class="title">
         <img src="assets/macaw.svg" alt="Logo!">
