--- a/index.html
+++ b/index.html
@@ -2,17 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Macaw</title>
     <meta name="description" content="The free, elegant and simple OS">
     <meta name="theme-color" content="#6799F3">
   </head>
   <body>
-    <div class="placeholder">
-      <p>Macaw is currently being developed and is not available. Therefore, this site is simply a placeholder. <a href="#">Contribute!</a></p>
-    </div>
     <div class="nav">
       <div class="title">
         <img src="assets/macaw.svg" alt="Logo!">
@@ -22,15 +17,17 @@
         <a href="#">About</a>
         <a href="#">Packages</a>
         <a href="#">Documentation</a>
-        <a href="#">Contribute</a>
         <a href="#">Donate</a>
-        <button>Download</button>
+        <button>Contribute</button>
       </div>
     </div>
     <div class="hero">
       <h1>Free, elegant and simple</h1>
-      <p>Macaw is a free and open-source project that aims to deliver a beautiful and easy to use Linux-based OS.</p>
-      <button>Download</button>
+      <p>Macaw is a free and open source project with the goal to create a secure, modern and easy to use Linux distribution.</p>
+      <button onclick="window.open('https://github.com/macawos')">Contribute</button>
+      <div style="width: 400px;margin:auto;margin-top:24px;">
+        <p style="font-family:var(--mono);color:var(--lcnt);font-size:16px;">We appreciate any help with the project, whether it's programming, design or whatever you can help with!</p>
+      </div>
     </div>
   </body>
 </html>
