added hrefs to documentation and one more to github

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <div class="bar">
         <a href="#">About</a>
         <a href="#">Packages</a>
-        <a href="#">Documentation</a>
+        <a href="https://docs.macawos.com">Documentation</a>
         <a href="#">Donate</a>
-        <button>Contribute</button>
+        <button onclick="window.open('https://github.com/macawos')">Contribute</button>
       </div>
     </div>
     <div class="hero">
