--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </div>
     <div class="hero">
       <h1>Free, elegant and simple</h1>
-      <p>Macaw is a free and open source project with the goal to create a secure, modern and easy to use Linux distribution.</p>
-      <button onclick="window.open('https://github.com/macawos')">Contribute</button>
+      <p>Macaw is a free and open-source project with the goal to create a secure, modern and easy to use Linux distribution.</p>
+      <button style="width: 400px;" onclick="window.open('https://github.com/macawos')">Contribute</button>
       <div style="width: 400px;margin:auto;margin-top:24px;">
         <p style="font-family:var(--mono);color:var(--lcnt);font-size:16px;">We appreciate any help with the project, whether it's programming, design or whatever you can help with!</p>
       </div>
