fixed up some linking and colors, also added docs page

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/macawos/website/master/assets/style/style.css">
     <title>Macaw</title>
     <meta name="description" content="The free, elegant and simple OS">
-    <meta name="theme-color" content="#6799F3">
+    <meta name="theme-color" content="#3F8EE8">
+    <meta name="color" content="#3F8EE8">
   </head>
   <body>
     <div class="nav">
@@ -16,7 +17,7 @@
       <div class="bar">
         <a href="#">About</a>
         <a href="#">Packages</a>
-        <a href="https://docs.macawos.com">Documentation</a>
+        <a href="https://docs.macawos.com">Docs</a>
         <a href="#">Donate</a>
         <button onclick="window.open('https://github.com/macawos')">Contribute</button>
       </div>
