--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/macawos/website/master/assets/style/style.css">
+    <link rel="stylesheet" href="https://macawos.com/assets/style/style.css">
     <title>Macaw</title>
     <meta name="description" content="The free, elegant and simple OS">
     <meta name="theme-color" content="#3F8EE8">
