--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <link rel="stylesheet" href="https://macawos.com/assets/style/style.css">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://macawos.com/assets/style/style.css">
     <title>Macaw</title>
     <meta name="description" content="The free, elegant and simple OS">
     <meta name="theme-color" content="#3F8EE8">
@@ -19,13 +19,13 @@
         <a href="#">Packages</a>
         <a href="https://docs.macawos.com">Docs</a>
         <a href="#">Donate</a>
-        <button onclick="window.open('https://git.macawos.com')">Contribute</button>
+        <button onclick="https://git.macawos.com">Contribute</button>
       </div>
     </div>
     <div class="hero">
       <h1>Free, elegant and simple</h1>
       <p>Macaw is a free and open-source project with the goal to create a secure, modern and easy to use Linux distribution.</p>
-      <button style="width: 400px;" onclick="window.open('https://git.macawos.com')">Contribute</button>
+      <button style="width: 400px;" onclick="https://git.macawos.com">Contribute</button>
       <div style="width: 400px;margin:auto;margin-top:24px;">
         <p style="font-family:var(--mono);color:var(--lcnt);font-size:16px;">We appreciate any help with the project, whether it's programming, design or whatever you can help with!</p>
       </div>
