--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#">Packages</a>
         <a href="https://docs.macawos.com">Docs</a>
         <a href="#">Donate</a>
-        <button onclick="window.location.href('https://git.macawos.com')">Contribute</button>
+        <button onclick="window.open('https://git.macawos.com')">Contribute</button>
       </div>
     </div>
     <div class="hero">
