--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <link rel="stylesheet" href="https://macawos.com/assets/style/style.css">
+  <link rel="stylesheet" href="https://www.macawos.com/assets/style/style.css">
   <head>
     <meta charset="utf-8">
     <title>Macaw</title>
