testing testing, 123 abcdefghI've got a gal in Kalamazoo!

--- a/index.html
+++ b/index.html
@@ -19,17 +19,31 @@
         <a href="#">Plover</a>
         <a href="#">Packages</a>
         <a href="https://docs.macawos.com">Docs</a>
-        <a href="#">Donate</a>
+        <button class="donate-button">Donate</button>
         <button onclick="window.location.href='https://github.com/macawos';">Contribute</button>
+      </div>
+    </div>
+    <div class="nav">
+      <div class="title">
+        <img src="assets/macaw.svg" alt="Logo!">
+        <h1>Macaw</h1>
+      </div>
+      <div class="bar">
+        <a style="font-size: 16px;" href="#">About</a>
+        <a style="font-size: 16px;" href="#">Plover</a>
+        <a style="font-size: 16px;" href="#">Packages</a>
+        <a style="font-size: 16px;" href="https://docs.macawos.com">Docs</a>
+        <button style="font-size: 16px;" class="donate-button">Donate</button>
+        <button style="font-size: 16px;" onclick="window.location.href='https://github.com/macawos';">Contribute</button>
       </div>
     </div>
     <div class="hero">
       <h1>Free, elegant and simple</h1>
       <p>Macaw is a free and open-source project with the goal to create a secure, modern and easy to use Linux distribution.</p>
       <button style="width: 400px;" onclick="window.location.href='https://github.com/macawos';">Contribute</button>
-      <div style="width: 400px;margin:auto;margin-top:24px;">
+      <!-- <div style="width: 400px;margin:auto;margin-top:24px;">
         <p style="font-family:var(--mono);color:var(--lcnt);font-size:16px;">We appreciate any help with the project, whether it's programming, design or anything you're good at!</p>
-      </div>
+      </div> -->
     </div>
     <div class="main">
       <h1>News</h1>
