--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#">About</a>
         <a href="#">Plover</a>
         <a href="#">Packages</a>
-        <a href="https://docs.macawos.com">Docs</a>
+        <a href="/docs">Docs</a>
         <button class="donate-button">Donate</button>
         <button onclick="window.location.href='https://github.com/macawos';">Contribute</button>
       </div>
